[tool.poetry]
name = "gis-scripts"
version = "0.1.0"
description = ""
authors = ["Sam <thompsonfilm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
